
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onboarding-funnel-intelligence"
version = "0.1.0"
description = "Track activation funnel drop-off, isolate friction points, and rank onboarding opportunities."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
